# scopemm

./: .gitignore  Makefile  Makefile.am  autogen.sh  config.h.in  configure.ac  demo-blitz-raster.cc  demo-blitz.cc  demo-mouse.cc  demo-raster.cc  demo-simple.cc  demo-stl.cc  demo.cc  demo.cpp  gtk-blitz-gridcanvas.cc  gtk-blitz-gridcanvas.cpp  gtk-blitz-gridcanvas.h  gtk-blitz-gridcanvas.hpp  gtk-blitz-lineplot.cc  gtk-blitz-lineplot.cpp  gtk-blitz-lineplot.hpp  gtk-blitz.cpp  gtk-blitz.h  gtk-blitz.hpp  scopemm-1.0.pc.in  scopemm-affine.cc  scopemm-affine.h  scopemm-axeslayer.cc  scopemm-axeslayer.h  scopemm-base.h  scopemm-bbox.h  scopemm-grid.cc  scopemm-grid.h  scopemm-gridcanvas.cc  scopemm-gridcanvas.h  scopemm-layerimpl.h  scopemm-lineplot.cc  scopemm-lineplot.h  scopemm-mouseadapter.cc  scopemm-mouseadapter.h  (+6 more)
demos/: .gitignore  Makefile.am  demo-raster.cc
scopemm/: .gitignore  Makefile.am  lineplot.cc  lineplot.h  plotcanvas.h  rastercanvas.h  scopemm-plotcanvas.cc
src/: scopemm-rastercanvas.cc
src/scopemm/: plotcanvas.h  rastercanvas.h
